@@ -1,10 +1,10 @@
 /*******************************************************************************
- * Copyright (c) 2017 IBM Corporation and others.
+ * Copyright (c) 2017, 2023 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/legal/epl-2.0/
- * 
+ *
  * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
@@ -21,5 +21,6 @@ test {
         }
     }
 
-    jvmArgs '-Dservlet.jar.location=' + project(':com.ibm.websphere.javaee.servlet.3.1').configurations.archives.artifacts.files.asPath
+    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED",
+               "-Dservlet.jar.location=" + project(':com.ibm.websphere.javaee.servlet.3.1').configurations.archives.artifacts.files.asPath]
 }
